fix(header): spacing and sizes of logo #7

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,6 +61,18 @@ body {
   fill: currentColor;
 }
 
+.navbar-brand {
+  font-size: 1rem;
+  line-height: 2.5rem;
+  font-weight: 400;
+}
+
+.navbar-brand img {
+  margin-right: 0.5rem;
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
 .nav-item {
   white-space: nowrap;
 }
